Fix typeahead visibility

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3,3 +3,7 @@
         display: none;
     }
 }
+
+html, body {
+    height: 100%;
+}
